chore: add 4G scenarios (#15)
